src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>CORE</description>
        <formula>PricebookEntry.Product2.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Action__c</fullName>
        <description>Used to denote is a module has been Deferred or is being added to an Amendment Opportunity as a Retake</description>
        <inlineHelpText>Select Retake if the module has been added to an Amendment Opportunity as the student has failed the module and is retaking it
Select Deferred if the module has been deferred to a different period due to an Opportunity Amendment</inlineHelpText>
        <label>Amendment Action</label>
        <picklist>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retake</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>CORE - Product Author</description>
        <formula>PricebookEntry.Product2.Author__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Type__c</fullName>
        <description>CORE - Product Book Type</description>
        <formula>PricebookEntry.Product2.Book_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookshop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE</description>
        <label>Bookshop</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>CORE - Product Category</description>
        <formula>TEXT(PricebookEntry.Product2.Category2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>CORE - Product Class</description>
        <formula>PricebookEntry.Product2.Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copyright_Year__c</fullName>
        <description>Copyright Year of the Opportunity Line Item</description>
        <formula>PricebookEntry.Product2.Copyright_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copyright Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Reference__c</fullName>
        <description>Used to document whether a Module has a Credit. Populated from Proposal Line items.</description>
        <label>Discount Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>CORE - Product Division</description>
        <formula>PricebookEntry.Product2.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>CORE - Product Edition</description>
        <formula>PricebookEntry.Product2.Edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Sales_Quantity__c</fullName>
        <description>CORE</description>
        <label>Expected Sales Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Install_Date__c</fullName>
        <description>CORE</description>
        <label>Forecasted Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Title__c</fullName>
        <description>CORE - Product Full Title</description>
        <formula>PricebookEntry.Product2.Full_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>CORE - Product Group</description>
        <formula>PricebookEntry.Product2.Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <description>CORE - Product ISBN</description>
        <formula>PricebookEntry.Product2.ISBN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISBN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <description>CORE - Implementation Type of the Opportunity Product</description>
        <label>Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Purchase/Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS Building Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <description>Used to identify what options are group to which bundle</description>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <description>Configuration Type of Product2, Utilized for SA Rollover and Amendment Process (code)</description>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product/Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <description>CORE - Product Medium</description>
        <formula>PricebookEntry.Product2.Medium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Last_Updated__c</fullName>
        <description>Use by mobile to track when fields were last updated on the mobile app.</description>
        <label>Mobile Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mode_of_Delivery__c</fullName>
        <description>CORE</description>
        <label>Mode of Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Streaming (3rd-Party Hosted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website/Online Only (Licensed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website/Online Only (Free)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable - Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehoused AND Downloadable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable - DRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehoused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming (Tri-Pro Hosted)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Module, Utilized to determine the module for downstream communication</description>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product (Option)</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE</description>
        <label>Order Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE - Has invoice been sent?</description>
        <label>Order Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>CORE - Product Origin</description>
        <formula>TEXT(PricebookEntry.Product2.Origin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Implementation_Type__c</fullName>
        <description>CORE - If other implementation is selected this field is required.</description>
        <label>Other Implementation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Module__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies is the Module is associated to a qualification outside of the main qualification</description>
        <label>Outside Module</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pearson_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - tracks the Pearson course against a specific opportunity product</description>
        <label>Pearson Course</label>
        <referenceTo>PearsonCourseStructure__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - used to track primary contact against a specific Opportunity Product</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductOptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to determine the Option Group in which the Option belongs to. Used for Amendment Opportunity Process SA</description>
        <label>Product Option</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family_HE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by US HE to generate the Product Family hyperlink on the Opportunity Products</description>
        <label>Product Family</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product (Product Family)</relationshipLabel>
        <relationshipName>Product_Family</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Displays the Title of the Product Family. When clicked the User is redirected to custom product selector with the Product Family Id passed to the custom apex page</description>
        <formula>HYPERLINK(&apos;/apex/OneCRMProductFamilyDetailPage?oppId=&apos;+OpportunityId+&apos;&amp;productfamilyid=&apos;+ Product_Family_HE__r.Id,Product_Family_HE__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>CORE</description>
        <formula>TEXT(PricebookEntry.Product2.ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <description>CORE - Product Publish Date</description>
        <formula>PricebookEntry.Product2.Publish_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <description>Publisher of the Opportunity Line Item</description>
        <formula>PricebookEntry.Product2.Publisher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publisher</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_in_Stock__c</fullName>
        <description>CORE - Product Qty in Stock</description>
        <formula>PricebookEntry.Product2.Quantity_in_Stock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity in Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_By_Date__c</fullName>
        <description>CORE</description>
        <label>Required By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRP__c</fullName>
        <label>SRP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>CORE</description>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Bookshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to University/Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - tracks Salesperson against specific opportunity product</description>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CORE - Product Status</description>
        <formula>Text(PricebookEntry.Product2.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>CORE - Product Sub Category</description>
        <formula>PricebookEntry.Product2.Sub_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Order_Quantity__c</fullName>
        <description>CORE</description>
        <label>Suggested Order Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Item_Code__c</fullName>
        <description>CORE - Product Supplier Item Code</description>
        <formula>PricebookEntry.Product2.Supplier_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempRefID__c</fullName>
        <description>[HH- Remove before deployment] Temp to support Data Migration from Dev2</description>
        <externalId>true</externalId>
        <label>Temp-RefID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>CORE - Product URL</description>
        <formula>PricebookEntry.Product2.URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Product_Discount_greater_than_100</fullName>
        <active>true</active>
        <description>CORE - Cannot discount greater than 100%</description>
        <errorConditionFormula>Discount  &gt; 100</errorConditionFormula>
        <errorDisplayField>Discount</errorDisplayField>
        <errorMessage>The discount can not exceed 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Other_Implementation_Type</fullName>
        <active>true</active>
        <description>CORE - If &apos;Other&apos; is selected for the Implementation Type, you must fill in the &quot;Other Implementation Type&apos; text box.</description>
        <errorConditionFormula>AND( ISPICKVAL(Implementation_Type__c, &quot;Other&quot;),
  ISBLANK(Other_Implementation_Type__c))</errorConditionFormula>
        <errorDisplayField>Other_Implementation_Type__c</errorDisplayField>
        <errorMessage>If &apos;Other&apos; is selected for the Implementation Type, you must fill in the &apos;Other Implementation Type&apos; text box.</errorMessage>
    </validationRules>
</CustomObject>